[package]
name = "liquidfun"
version = "0.8.1"
authors = ["Richard Janicek <r@janicek.co>"]
description = "Rust bindings for LiquidFun."
license = "MIT"
repository = "https://github.com/rjanicek/liquidfun-rust"
documentation = "http://rjanicek.github.io/liquidfun-rust/liquidfun/"
readme = "README.md"
keywords = ["liquidfun", "box2d", "particle", "physics", "game"]
build = "src/build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
bitflags = "1.2"
libc = "0.2"
